@@ -7216,6 +7216,61 @@ name|DirectoryReader
 argument_list|>
 name|newReaderCreator
 decl_stmt|;
+comment|// For testing
+DECL|method|areAllSearcherReferencesEmpty
+name|boolean
+name|areAllSearcherReferencesEmpty
+parameter_list|()
+block|{
+name|boolean
+name|isEmpty
+decl_stmt|;
+synchronized|synchronized
+init|(
+name|searcherLock
+init|)
+block|{
+name|isEmpty
+operator|=
+name|_searchers
+operator|.
+name|isEmpty
+argument_list|()
+expr_stmt|;
+name|isEmpty
+operator|=
+name|isEmpty
+operator|&&
+name|_realtimeSearchers
+operator|.
+name|isEmpty
+argument_list|()
+expr_stmt|;
+name|isEmpty
+operator|=
+name|isEmpty
+operator|&&
+operator|(
+name|_searcher
+operator|==
+literal|null
+operator|)
+expr_stmt|;
+name|isEmpty
+operator|=
+name|isEmpty
+operator|&&
+operator|(
+name|realtimeSearcher
+operator|==
+literal|null
+operator|)
+expr_stmt|;
+block|}
+return|return
+name|isEmpty
+return|;
+block|}
 comment|/**   * Return a registered {@link RefCounted}&lt;{@link SolrIndexSearcher}&gt; with   * the reference count incremented.  It<b>must</b> be decremented when no longer needed.   * This method should not be called from SolrCoreAware.inform() since it can result   * in a deadlock if useColdSearcher==false.   * If handling a normal request, the searcher should be obtained from    * {@link org.apache.solr.request.SolrQueryRequest#getSearcher()} instead.   */
 DECL|method|getSearcher
 specifier|public
@@ -7975,6 +8030,40 @@ init|(
 name|searcherLock
 init|)
 block|{
+comment|// Check if the core is closed again inside the lock in case this method is racing with a close. If the core is
+comment|// closed, clean up the new searcher and bail.
+if|if
+condition|(
+name|isClosed
+argument_list|()
+condition|)
+block|{
+name|newSearcher
+operator|.
+name|decref
+argument_list|()
+expr_stmt|;
+comment|// once for caller since we're not returning it
+name|newSearcher
+operator|.
+name|decref
+argument_list|()
+expr_stmt|;
+comment|// once for ourselves since it won't be "replaced"
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"openNewSearcher called on closed core"
+argument_list|)
+throw|;
+block|}
 if|if
 condition|(
 name|realtimeSearcher
