@@ -35,6 +35,19 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|ExecutorUtil
@@ -143,9 +156,35 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|search
+operator|.
+name|SolrIndexSearcher
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|util
 operator|.
 name|DefaultSolrThreadFactory
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|RefCounted
 import|;
 end_import
 begin_import
@@ -228,17 +267,6 @@ operator|.
 name|concurrent
 operator|.
 name|ExecutorService
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|Executors
 import|;
 end_import
 begin_import
@@ -1841,6 +1869,225 @@ operator|.
 name|queryResultWindowSize
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * Test that's meant to be run with many iterations to expose a leak of SolrIndexSearcher when a core is closed    * due to a reload. Without the fix, this test fails with most iters=1000 runs.    */
+annotation|@
+name|Test
+DECL|method|testReloadLeak
+specifier|public
+name|void
+name|testReloadLeak
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|ExecutorService
+name|executor
+init|=
+name|ExecutorUtil
+operator|.
+name|newMDCAwareFixedThreadPool
+argument_list|(
+literal|1
+argument_list|,
+operator|new
+name|DefaultSolrThreadFactory
+argument_list|(
+literal|"testReloadLeak"
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|// Continuously open new searcher while core is not closed, and reload core to try to reproduce searcher leak.
+comment|// While in practice we never continuously open new searchers, this is trying to make up for the fact that opening
+comment|// a searcher in this empty core is very fast by opening new searchers continuously to increase the likelihood
+comment|// for race.
+name|SolrCore
+name|core
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Refcount != 1"
+argument_list|,
+name|core
+operator|.
+name|getOpenCount
+argument_list|()
+operator|==
+literal|1
+argument_list|)
+expr_stmt|;
+name|executor
+operator|.
+name|execute
+argument_list|(
+operator|new
+name|NewSearcherRunnable
+argument_list|(
+name|core
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Since we called getCore() vs getCoreInc() and don't own a refCount, the container should decRef the core
+comment|// and close it when we call reload.
+name|h
+operator|.
+name|reload
+argument_list|()
+expr_stmt|;
+name|executor
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+name|executor
+operator|.
+name|awaitTermination
+argument_list|(
+literal|1
+argument_list|,
+name|TimeUnit
+operator|.
+name|MINUTES
+argument_list|)
+expr_stmt|;
+comment|// Check that all cores are closed and no searcher references are leaked.
+name|assertTrue
+argument_list|(
+literal|"SolrCore "
+operator|+
+name|core
+operator|+
+literal|" is not closed"
+argument_list|,
+name|core
+operator|.
+name|isClosed
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|core
+operator|.
+name|areAllSearcherReferencesEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|class|NewSearcherRunnable
+specifier|private
+specifier|static
+class|class
+name|NewSearcherRunnable
+implements|implements
+name|Runnable
+block|{
+DECL|field|core
+specifier|private
+specifier|final
+name|SolrCore
+name|core
+decl_stmt|;
+DECL|method|NewSearcherRunnable
+name|NewSearcherRunnable
+parameter_list|(
+name|SolrCore
+name|core
+parameter_list|)
+block|{
+name|this
+operator|.
+name|core
+operator|=
+name|core
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|run
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+while|while
+condition|(
+operator|!
+name|core
+operator|.
+name|isClosed
+argument_list|()
+condition|)
+block|{
+try|try
+block|{
+name|RefCounted
+argument_list|<
+name|SolrIndexSearcher
+argument_list|>
+name|newSearcher
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|newSearcher
+operator|=
+name|core
+operator|.
+name|openNewSearcher
+argument_list|(
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|newSearcher
+operator|!=
+literal|null
+condition|)
+block|{
+name|newSearcher
+operator|.
+name|decref
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|SolrException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|core
+operator|.
+name|isClosed
+argument_list|()
+condition|)
+block|{
+throw|throw
+name|e
+throw|;
+block|}
+block|}
+block|}
+block|}
 block|}
 block|}
 end_class
